--- a/asset/overlay/etc/skel/.config/deepin/dde-daemon/keybinding/custom.ini
+++ b/asset/overlay/etc/skel/.config/deepin/dde-daemon/keybinding/custom.ini
@@ -1,17 +1,17 @@
 
 [File-Manager-001]
 Name=File Manager
-Action=dde-file-manager
+Action=pcmanfm-qt
 Accels=<Alt><Shift>f;
 
 [File-Manager-002]
 Name=File Manager
-Action=pcmanfm-qt
+Action=dde-file-manager
 Accels=<Alt><Shift>g;
 
 [Text-Editor]
 Name=Text Editor
-Action=gxde-editor
+Action=mousepad
 Accels=<Alt><Shift>e;
 
 [Web-Browser]
@@ -21,17 +21,17 @@ Accels=<Alt><Shift>b;
 
 [Terminal-001]
 Name=Terminal
-Action=gxde-terminal
+Action=sakura
 Accels=<Alt>Return;
 
 [Terminal-002]
 Name=Terminal
-Action=gxde-terminal
+Action=sakura
 Accels=<Alt><Shift>a;
 
 [Terminal-003]
 Name=Terminal
-Action=sakura
+Action=gxde-terminal
 Accels=<Alt><Control>a;
 
 [Terminal-004]
@@ -58,3 +58,18 @@ Accels=<Alt><Shift>x;
 Name=Settings
 Action=dde-control-center -t
 Accels=<Alt><Shift>s;
+
+[Rofi-Run]
+Name=Rofi Show Run
+Action=rofi -show run
+Accels=<Alt><Shift>r;
+
+[Rofi-Drun]
+Name=Rofi Show Drun
+Action=rofi -show drun -show-icons
+Accels=<Alt><Shift>d;
+
+[Rofi-Window]
+Name=Rofi Show Window
+Action=rofi -show window -show-icons
+Accels=<Alt><Shift>w;
