--- a/asset/overlay/etc/skel/.config/deepin/dde-daemon/keybinding/custom.ini
+++ b/asset/overlay/etc/skel/.config/deepin/dde-daemon/keybinding/custom.ini
@@ -6,7 +6,7 @@ Accels=<Alt><Shift>f;
 
 [File-Manager-002]
 Name=File Manager
-Action=dde-file-manager
+Action=thunar
 Accels=<Alt><Shift>g;
 
 [Text-Editor]
