--- a/factory/iso-template/amd64/boot/grub/grub.cfg
+++ b/factory/iso-template/amd64/boot/grub/grub.cfg
@@ -1,48 +1,154 @@
 source /boot/grub/config.cfg
 
 # Live boot
-menuentry "Try Or Install GXDE (Linux 6.11) (Chinese)" --hotkey=t {
-	linux	/live/vmlinuz boot=live components quiet splash findiso=${iso_path} locales=zh_CN.UTF-8
+menuentry "Try Or Install GXDE (Main)" --hotkey=t {
+	set extra_option="components quiet splash"
+	#set locale_option="locales=en_US.UTF-8"
+	#set locale_option="locales=zh_TW.UTF-8"
+	#set locale_option="locales=zh_CN.UTF-8"
+	#set locale_option="locales=zh_HK.UTF-8"
+	#set locale_option="locales=ja_JP.UTF-8"
+	#set locale_option="locales=ko_KR.UTF-8"
+	set locale_option=""
+	set boot_option=${extra_option} ${locale_option}
+	linux	/live/vmlinuz boot=live findiso=${iso_path} ${boot_option}
 	initrd	/live/initrd.img
 }
 
-menuentry "Try Or Install GXDE (fail-safe mode) (Linux 6.11) (Chinese)" --hotkey=t {
-	linux	/live/vmlinuz boot=live components memtest noapic noapm nodma nomce nolapic nosmp nosplash vga=788 locales=zh_CN.UTF-8
+menuentry "Try Or Install GXDE (Fail Safe Mode)" --hotkey=t {
+	set extra_option="components memtest noapic noapm nodma nomce nolapic nosmp nosplash vga=788"
+	#set locale_option="locales=en_US.UTF-8"
+	#set locale_option="locales=zh_TW.UTF-8"
+	#set locale_option="locales=zh_CN.UTF-8"
+	#set locale_option="locales=zh_HK.UTF-8"
+	#set locale_option="locales=ja_JP.UTF-8"
+	#set locale_option="locales=ko_KR.UTF-8"
+	set locale_option=""
+	set boot_option=${extra_option} ${locale_option}
+	linux	/live/vmlinuz boot=live ${boot_option}
 	initrd	/live/initrd.img
 }
 
-menuentry "Try Or Install GXDE (Linux 6.1) (Chinese)" --hotkey=t {
-	linux	/live/vmlinuz-oldstable boot=live components quiet splash findiso=${iso_path} locales=zh_CN.UTF-8
+menuentry "Try Or Install GXDE (Old Stable)" --hotkey=t {
+	set extra_option="components quiet splash"
+	#set locale_option="locales=en_US.UTF-8"
+	#set locale_option="locales=zh_TW.UTF-8"
+	#set locale_option="locales=zh_CN.UTF-8"
+	#set locale_option="locales=zh_HK.UTF-8"
+	#set locale_option="locales=ja_JP.UTF-8"
+	#set locale_option="locales=ko_KR.UTF-8"
+	set locale_option=""
+	set boot_option=${extra_option} ${locale_option}
+	linux	/live/vmlinuz-oldstable boot=live findiso=${iso_path} ${boot_option}
 	initrd	/live/initrd.img
 }
 
-menuentry "Try Or Install GXDE (fail-safe mode) (Linux 6.1) (Chinese)" --hotkey=t {
-	linux	/live/vmlinuz-oldstable boot=live components memtest noapic noapm nodma nomce nolapic nosmp nosplash vga=788 locales=zh_CN.UTF-8
+menuentry "Try Or Install GXDE (Old Stable) (Fail Safe Mode)" --hotkey=t {
+	set extra_option="components memtest noapic noapm nodma nomce nolapic nosmp nosplash vga=788"
+	#set locale_option="locales=en_US.UTF-8"
+	#set locale_option="locales=zh_TW.UTF-8"
+	#set locale_option="locales=zh_CN.UTF-8"
+	#set locale_option="locales=zh_HK.UTF-8"
+	#set locale_option="locales=ja_JP.UTF-8"
+	#set locale_option="locales=ko_KR.UTF-8"
+	set locale_option=""
+	set boot_option=${extra_option} ${locale_option}
+	linux	/live/vmlinuz-oldstable boot=live ${boot_option}
 	initrd	/live/initrd.img
 }
 
 submenu 'Other Language ...' --hotkey=l {
 	source /boot/grub/theme.cfg
 
-	menuentry "Try Or Install GXDE (Linux 6.11) (English)" --hotkey=t {
-		linux	/live/vmlinuz boot=live components quiet splash findiso=${iso_path}
+
+	## zh_TW
+	menuentry "Try Or Install GXDE {zh_TW} (Main)" --hotkey=t {
+		set extra_option="components quiet splash"
+		set locale_option="locales=zh_TW.UTF-8"
+		set boot_option=${extra_option} ${locale_option}
+		linux	/live/vmlinuz boot=live findiso=${iso_path} ${boot_option}
 		initrd	/live/initrd.img
 	}
 
-	menuentry "Try Or Install GXDE (fail-safe mode) (Linux 6.11) (English)" --hotkey=t {
-		linux	/live/vmlinuz boot=live components memtest noapic noapm nodma nomce nolapic nosmp nosplash vga=788
+
+	## zh_CN
+	menuentry "Try Or Install GXDE {zh_CN} (Main)" --hotkey=t {
+		set extra_option="components quiet splash"
+		set locale_option="locales=zh_CN.UTF-8"
+		set boot_option=${extra_option} ${locale_option}
+		linux	/live/vmlinuz boot=live findiso=${iso_path} ${boot_option}
 		initrd	/live/initrd.img
 	}
 
-	menuentry "Try Or Install GXDE (Linux 6.1) (English)" --hotkey=t {
-		linux	/live/vmlinuz-oldstable boot=live components quiet splash findiso=${iso_path}
+
+	## zh_HK
+	menuentry "Try Or Install GXDE {zh_HK} (Main)" --hotkey=t {
+		set extra_option="components quiet splash"
+		set locale_option="locales=zh_HK.UTF-8"
+		set boot_option=${extra_option} ${locale_option}
+		linux	/live/vmlinuz boot=live findiso=${iso_path} ${boot_option}
 		initrd	/live/initrd.img
 	}
 
-	menuentry "Try Or Install GXDE (fail-safe mode) (Linux 6.1) (English)" --hotkey=t {
-		linux	/live/vmlinuz-oldstable boot=live components memtest noapic noapm nodma nomce nolapic nosmp nosplash vga=788
+
+	## ja_JP
+	menuentry "Try Or Install GXDE {ja_JP} (Main)" --hotkey=t {
+		set extra_option="components quiet splash"
+		set locale_option="locales=ja_JP.UTF-8"
+		set boot_option=${extra_option} ${locale_option}
+		linux	/live/vmlinuz boot=live findiso=${iso_path} ${boot_option}
 		initrd	/live/initrd.img
 	}
+
+
+	## ko_KR
+	menuentry "Try Or Install GXDE {ko_KR} (Main)" --hotkey=t {
+		set extra_option="components quiet splash"
+		set locale_option="locales=ko_KR.UTF-8"
+		set boot_option=${extra_option} ${locale_option}
+		linux	/live/vmlinuz boot=live findiso=${iso_path} ${boot_option}
+		initrd	/live/initrd.img
+	}
+
+
+
+
+	## en_US
+	menuentry "Try Or Install GXDE {en_US} (Main)" --hotkey=t {
+		set extra_option="components quiet splash"
+		set locale_option="locales=en_US.UTF-8"
+		set boot_option=${extra_option} ${locale_option}
+		linux	/live/vmlinuz boot=live findiso=${iso_path} ${boot_option}
+		initrd	/live/initrd.img
+	}
+
+	menuentry "Try Or Install GXDE (en_US) (Fail Safe Mode)" --hotkey=t {
+		set extra_option="components memtest noapic noapm nodma nomce nolapic nosmp nosplash vga=788"
+		set locale_option="locales=en_US.UTF-8"
+		set boot_option=${extra_option} ${locale_option}
+		linux	/live/vmlinuz boot=live ${boot_option}
+		initrd	/live/initrd.img
+	}
+
+	menuentry "Try Or Install GXDE (en_US) (Old Stable)" --hotkey=t {
+		set extra_option="components quiet splash"
+		set locale_option="locales=en_US.UTF-8"
+		set boot_option=${extra_option} ${locale_option}
+		linux	/live/vmlinuz-oldstable boot=live findiso=${iso_path} ${boot_option}
+		initrd	/live/initrd.img
+	}
+
+	menuentry "Try Or Install GXDE (en_US) (Old Stable) (Fail Safe Mode)" --hotkey=t {
+		set extra_option="components memtest noapic noapm nodma nomce nolapic nosmp nosplash vga=788"
+		set locale_option="locales=en_US.UTF-8"
+		set boot_option=${extra_option} ${locale_option}
+		linux	/live/vmlinuz-oldstable boot=live ${boot_option}
+		initrd	/live/initrd.img
+	}
+
+
+
+
 }
 
 # You can add more entries like this
