--- a/factory/iso-template/amd64/boot/grub/grub.cfg
+++ b/factory/iso-template/amd64/boot/grub/grub.cfg
@@ -3,56 +3,64 @@ source /boot/grub/config.cfg
 # Live boot
 menuentry "Try Or Install GXDE (Main)" --hotkey=t {
 	set extra_option="components quiet splash"
+
+	set locale_option=""
 	#set locale_option="locales=en_US.UTF-8"
 	#set locale_option="locales=zh_TW.UTF-8"
 	#set locale_option="locales=zh_CN.UTF-8"
 	#set locale_option="locales=zh_HK.UTF-8"
 	#set locale_option="locales=ja_JP.UTF-8"
 	#set locale_option="locales=ko_KR.UTF-8"
-	set locale_option=""
-	set boot_option=${extra_option} ${locale_option}
+
+	set boot_option="${locale_option} ${extra_option}"
 	linux	/live/vmlinuz boot=live findiso=${iso_path} ${boot_option}
 	initrd	/live/initrd.img
 }
 
 menuentry "Try Or Install GXDE (Fail Safe Mode)" --hotkey=t {
 	set extra_option="components memtest noapic noapm nodma nomce nolapic nosmp nosplash vga=788"
+
+	set locale_option=""
 	#set locale_option="locales=en_US.UTF-8"
 	#set locale_option="locales=zh_TW.UTF-8"
 	#set locale_option="locales=zh_CN.UTF-8"
 	#set locale_option="locales=zh_HK.UTF-8"
 	#set locale_option="locales=ja_JP.UTF-8"
 	#set locale_option="locales=ko_KR.UTF-8"
-	set locale_option=""
-	set boot_option=${extra_option} ${locale_option}
+
+	set boot_option="${locale_option} ${extra_option}"
 	linux	/live/vmlinuz boot=live ${boot_option}
 	initrd	/live/initrd.img
 }
 
 menuentry "Try Or Install GXDE (Old Stable)" --hotkey=t {
 	set extra_option="components quiet splash"
+
+	set locale_option=""
 	#set locale_option="locales=en_US.UTF-8"
 	#set locale_option="locales=zh_TW.UTF-8"
 	#set locale_option="locales=zh_CN.UTF-8"
 	#set locale_option="locales=zh_HK.UTF-8"
 	#set locale_option="locales=ja_JP.UTF-8"
 	#set locale_option="locales=ko_KR.UTF-8"
-	set locale_option=""
-	set boot_option=${extra_option} ${locale_option}
+
+	set boot_option="${locale_option} ${extra_option}"
 	linux	/live/vmlinuz-oldstable boot=live findiso=${iso_path} ${boot_option}
 	initrd	/live/initrd.img
 }
 
 menuentry "Try Or Install GXDE (Old Stable) (Fail Safe Mode)" --hotkey=t {
 	set extra_option="components memtest noapic noapm nodma nomce nolapic nosmp nosplash vga=788"
+
+	set locale_option=""
 	#set locale_option="locales=en_US.UTF-8"
 	#set locale_option="locales=zh_TW.UTF-8"
 	#set locale_option="locales=zh_CN.UTF-8"
 	#set locale_option="locales=zh_HK.UTF-8"
 	#set locale_option="locales=ja_JP.UTF-8"
 	#set locale_option="locales=ko_KR.UTF-8"
-	set locale_option=""
-	set boot_option=${extra_option} ${locale_option}
+
+	set boot_option="${locale_option} ${extra_option}"
 	linux	/live/vmlinuz-oldstable boot=live ${boot_option}
 	initrd	/live/initrd.img
 }
@@ -65,7 +73,8 @@ submenu 'Other Language ...' --hotkey=l {
 	menuentry "Try Or Install GXDE {zh_TW} (Main)" --hotkey=t {
 		set extra_option="components quiet splash"
 		set locale_option="locales=zh_TW.UTF-8"
-		set boot_option=${extra_option} ${locale_option}
+
+		set boot_option="${locale_option} ${extra_option}"
 		linux	/live/vmlinuz boot=live findiso=${iso_path} ${boot_option}
 		initrd	/live/initrd.img
 	}
@@ -75,7 +84,8 @@ submenu 'Other Language ...' --hotkey=l {
 	menuentry "Try Or Install GXDE {zh_CN} (Main)" --hotkey=t {
 		set extra_option="components quiet splash"
 		set locale_option="locales=zh_CN.UTF-8"
-		set boot_option=${extra_option} ${locale_option}
+
+		set boot_option="${locale_option} ${extra_option}"
 		linux	/live/vmlinuz boot=live findiso=${iso_path} ${boot_option}
 		initrd	/live/initrd.img
 	}
@@ -85,7 +95,8 @@ submenu 'Other Language ...' --hotkey=l {
 	menuentry "Try Or Install GXDE {zh_HK} (Main)" --hotkey=t {
 		set extra_option="components quiet splash"
 		set locale_option="locales=zh_HK.UTF-8"
-		set boot_option=${extra_option} ${locale_option}
+
+		set boot_option="${locale_option} ${extra_option}"
 		linux	/live/vmlinuz boot=live findiso=${iso_path} ${boot_option}
 		initrd	/live/initrd.img
 	}
@@ -95,7 +106,8 @@ submenu 'Other Language ...' --hotkey=l {
 	menuentry "Try Or Install GXDE {ja_JP} (Main)" --hotkey=t {
 		set extra_option="components quiet splash"
 		set locale_option="locales=ja_JP.UTF-8"
-		set boot_option=${extra_option} ${locale_option}
+
+		set boot_option="${locale_option} ${extra_option}"
 		linux	/live/vmlinuz boot=live findiso=${iso_path} ${boot_option}
 		initrd	/live/initrd.img
 	}
@@ -105,7 +117,8 @@ submenu 'Other Language ...' --hotkey=l {
 	menuentry "Try Or Install GXDE {ko_KR} (Main)" --hotkey=t {
 		set extra_option="components quiet splash"
 		set locale_option="locales=ko_KR.UTF-8"
-		set boot_option=${extra_option} ${locale_option}
+
+		set boot_option="${locale_option} ${extra_option}"
 		linux	/live/vmlinuz boot=live findiso=${iso_path} ${boot_option}
 		initrd	/live/initrd.img
 	}
@@ -117,7 +130,8 @@ submenu 'Other Language ...' --hotkey=l {
 	menuentry "Try Or Install GXDE {en_US} (Main)" --hotkey=t {
 		set extra_option="components quiet splash"
 		set locale_option="locales=en_US.UTF-8"
-		set boot_option=${extra_option} ${locale_option}
+
+		set boot_option="${locale_option} ${extra_option}"
 		linux	/live/vmlinuz boot=live findiso=${iso_path} ${boot_option}
 		initrd	/live/initrd.img
 	}
@@ -125,7 +139,8 @@ submenu 'Other Language ...' --hotkey=l {
 	menuentry "Try Or Install GXDE (en_US) (Fail Safe Mode)" --hotkey=t {
 		set extra_option="components memtest noapic noapm nodma nomce nolapic nosmp nosplash vga=788"
 		set locale_option="locales=en_US.UTF-8"
-		set boot_option=${extra_option} ${locale_option}
+
+		set boot_option="${locale_option} ${extra_option}"
 		linux	/live/vmlinuz boot=live ${boot_option}
 		initrd	/live/initrd.img
 	}
@@ -133,7 +148,8 @@ submenu 'Other Language ...' --hotkey=l {
 	menuentry "Try Or Install GXDE (en_US) (Old Stable)" --hotkey=t {
 		set extra_option="components quiet splash"
 		set locale_option="locales=en_US.UTF-8"
-		set boot_option=${extra_option} ${locale_option}
+
+		set boot_option="${locale_option} ${extra_option}"
 		linux	/live/vmlinuz-oldstable boot=live findiso=${iso_path} ${boot_option}
 		initrd	/live/initrd.img
 	}
@@ -141,7 +157,8 @@ submenu 'Other Language ...' --hotkey=l {
 	menuentry "Try Or Install GXDE (en_US) (Old Stable) (Fail Safe Mode)" --hotkey=t {
 		set extra_option="components memtest noapic noapm nodma nomce nolapic nosmp nosplash vga=788"
 		set locale_option="locales=en_US.UTF-8"
-		set boot_option=${extra_option} ${locale_option}
+
+		set boot_option="${locale_option} ${extra_option}"
 		linux	/live/vmlinuz-oldstable boot=live ${boot_option}
 		initrd	/live/initrd.img
 	}
