--- a/asset/overlay/etc/skel/.config/deepin/dde-daemon/keybinding/custom.ini
+++ b/asset/overlay/etc/skel/.config/deepin/dde-daemon/keybinding/custom.ini
@@ -73,3 +73,8 @@ Accels=<Alt><Shift>d;
 Name=Rofi Show Window
 Action=rofi -show window -show-icons
 Accels=<Alt><Shift>w;
+
+[Runner]
+Name=Runner
+Action=dde-grand-search
+Accels=<Alt>F2;
